--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
     buildToolsVersion "30.0.3"
 
     defaultConfig {
-        applicationId "com.example.barcodemodule"
+        applicationId "com.example.barcodescanner"
         minSdkVersion 24
         targetSdkVersion 30
         versionCode 1
